--- a/index0313.html
+++ b/index0313.html
@@ -90,7 +90,7 @@
       </div>
       <div class="part">
         <div>Tel: 123-456-7890</div>
-      <div>
+      </div>
       <div class="foot_txt">© 2023 by Alison Knight. Proudly created with Wix.com</div>
 
     </footer>
