--- a/oa.html
+++ b/oa.html
@@ -14,51 +14,33 @@
 
   </head>
   <body lang="zh-tw">
-    <div id='bg'>
-      <img src="https://static.wixstatic.com/media/84770f_54542ae0ad9b460e946f767ac8634da3.jpg/v1/fill/w_980,h_600,al_c,q_85,usm_0.66_1.00_0.01/84770f_54542ae0ad9b460e946f767ac8634da3.webp">
+
+    <!-- <div id='box'>
+      <span class='a'>a</span>
+
+      <div>
+        <div class='a'>b</div>
+      </div>
+
+      <span>asdasds</span>
+      <div>asdasds</div>
+      <span>asdasds</span>
+    </div> -->
+<!--
+    <div id='apple'>
     </div>
+
+    <span class='item'>A</span>
+    <div class='item'>A</div>
+    <span class='item'>B</span> -->
 
     <header id='header'>
-      <div class='content'>
-        <div>Logo</div>
-        
-        <div>
-          <a href="">Menu 1</a>
-          <a href="">Menu 2</a>
-          <a href="">Menu 3</a>
-        </div>
-
-        <div>
-          <img src="https://static.wixstatic.com/media/84770f_54542ae0ad9b460e946f767ac8634da3.jpg/v1/fill/w_980,h_600,al_c,q_85,usm_0.66_1.00_0.01/84770f_54542ae0ad9b460e946f767ac8634da3.webp">
-        </div>
+      <div>
+        <span class='c1'>1</span>
+        <span class='c2'>2</span>
+        <span class='c3'>3</span>
       </div>
     </header>
-
-    <div id='banner'>
-      <div class='content'>
-        <div>
-          asd
-        </div>
-      </div>
-    </div>
-
-    <div class='block'>
-1
-    </div>
-
-    <div class='block'>
-2
-    </div>
-
-    <div class='block'>
-3
-    </div>
-
-    <div class='block'>
-4
-    </div>
-
-
 
 
   </body>
