漢堡堡教學 hw: 做出黑色底部shadow

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <img src="https://static.wixstatic.com/media/84770f_54542ae0ad9b460e946f767ac8634da3.jpg/v1/fill/w_980,h_600,al_c,q_85,usm_0.66_1.00_0.01/84770f_54542ae0ad9b460e946f767ac8634da3.webp">
     </div>
     <div id="fg">
-      <img src="https://static.wixstatic.com/media/84770f_54542ae0ad9b460e946f767ac8634da3.jpg/v1/fill/w_980,h_600,al_c,q_85,usm_0.66_1.00_0.01/84770f_54542ae0ad9b460e946f767ac8634da3.webp">
+      <img src="https://static.wixstatic.com/media/84770f_3ae959ed8ff54fec89d7bd0574b7bf04.jpg/v1/fill/w_1617,h_1168,al_c,q_85/84770f_3ae959ed8ff54fec89d7bd0574b7bf04.webp">
     </div>
     <header id="header">
       <div class="center">
