blog切版 待完成：內文字向左，瀑布流

--- a/blog.html
+++ b/blog.html
@@ -48,44 +48,160 @@
           <div class="image">
             <img src="https://static.wixstatic.com/media/e94d4cc30ea64bcbb4d083b1da52f383.jpg/v1/fit/w_455,h_303,al_c,q_80/file.webp">
           </div>
-
-          <div class="header">
-            <div id="avatar"></div>
-            <div class="avatar_detail">
-              <div class="name">Admin</div>
-              <div class="date">
+          <div class="content">
+            <div class="header">
+              <div id="avatar"></div>
+              <div class="avatar_detail">
+                <span>Admin</span>
                 <span>Jan 4 · 2 min</span>
               </div>
             </div>
+
+
+            <div class="title">Recipes of the day</div>
+            <div class="description">Create a blog post subtitle that summarizes your post in a few short, punchy sentences and entices your audience to continue reading. Welcome to your blog post. Use this space to connect with your readers and potential customers in a ...</div>
+            <div class="footer">
+              <span>404 views</span>
+              <span>Write a comment</span>
+            </div>
           </div>
-
-          <!--
-          <div class="title">Recipes of the day</div>
-          <div class="description">Create a blog post subtitle that summarizes your post in a few short, punchy sentences and entices your audience to continue reading. Welcome to your blog post. Use this space to connect with your readers and potential customers in a ...</div>
-          <div class="footer">
-            <span>404 views</span>
-            <span>Write a comment</span>
-          </div> -->
         </div>
 
         <div class="box">
+          <div class="image">
+            <img src="https://static.wixstatic.com/media/3884a0570fc3413eb672c0f2e26ed79e.jpg/v1/fit/w_455,h_303,al_c,q_80/file.webp">
+          </div>
+          <div class="content">
+            <div class="header">
+              <div id="avatar"></div>
+              <div class="avatar_detail">
+                <span>Admin</span>
+                <span>Jan 4 · 2 min</span>
+              </div>
+            </div>
 
+
+            <div class="title">Recipes of the day</div>
+            <div class="description">Create a blog post subtitle that summarizes your post in a few short, punchy sentences and entices your audience to continue reading. Welcome to your blog post. Use this space to connect with your readers and potential customers in a ...</div>
+            <div class="footer">
+              <span>404 views</span>
+              <span>Write a comment</span>
+            </div>
+          </div>
         </div>
 
         <div class="box">
+          <div class="image">
+            <img src="https://static.wixstatic.com/media/3f3e35c4b9794ff0980395cf3c946436.jpg/v1/fit/w_455,h_339,al_c,q_80/file.webp">
+          </div>
+          <div class="content">
+            <div class="header">
+              <div id="avatar"></div>
+              <div class="avatar_detail">
+                <span>Admin</span>
+                <span>Jan 4 · 2 min</span>
+              </div>
+            </div>
 
+
+            <div class="title">Recipes of the day</div>
+            <div class="description">Create a blog post subtitle that summarizes your post in a few short, punchy sentences and entices your audience to continue reading. Welcome to your blog post. Use this space to connect with your readers and potential customers in a ...</div>
+            <div class="footer">
+              <span>404 views</span>
+              <span>Write a comment</span>
+            </div>
+          </div>
         </div>
 
         <div class="box">
+          <div class="image">
+            <img src="https://static.wixstatic.com/media/3f4c0e873f374380931817a1844fe1f9.jpg/v1/fit/w_455,h_301,al_c,q_80/file.webp">
+          </div>
+          <div class="content">
+            <div class="header">
+              <div id="avatar"></div>
+              <div class="avatar_detail">
+                <span>Admin</span>
+                <span>Jan 4 · 2 min</span>
+              </div>
+            </div>
 
+
+            <div class="title">Recipes of the day</div>
+            <div class="description">Create a blog post subtitle that summarizes your post in a few short, punchy sentences and entices your audience to continue reading. Welcome to your blog post. Use this space to connect with your readers and potential customers in a ...</div>
+            <div class="footer">
+              <span>404 views</span>
+              <span>Write a comment</span>
+            </div>
+          </div>
         </div>
 
         <div class="box">
+          <div class="image">
+            <img src="https://static.wixstatic.com/media/14cabe6ca03c46389474ddb0f0039e83.jpg/v1/fit/w_456,h_318,al_c,q_80/file.webp">
+          </div>
+          <div class="content">
+            <div class="header">
+              <div id="avatar"></div>
+              <div class="avatar_detail">
+                <span>Admin</span>
+                <span>Jan 4 · 2 min</span>
+              </div>
+            </div>
 
+
+            <div class="title">Recipes of the day</div>
+            <div class="description">Create a blog post subtitle that summarizes your post in a few short, punchy sentences and entices your audience to continue reading. Welcome to your blog post. Use this space to connect with your readers and potential customers in a ...</div>
+            <div class="footer">
+              <span>404 views</span>
+              <span>Write a comment</span>
+            </div>
+          </div>
         </div>
+
+        <div class="box">
+          <div class="image">
+            <img src="https://static.wixstatic.com/media/412a860ec5fd4353b26e677835debfde.jpg/v1/fit/w_455,h_303,al_c,q_80/file.webp">
+          </div>
+          <div class="content">
+            <div class="header">
+              <div id="avatar"></div>
+              <div class="avatar_detail">
+                <span>Admin</span>
+                <span>Jan 4 · 2 min</span>
+              </div>
+            </div>
+
+
+            <div class="title">Recipes of the day</div>
+            <div class="description">Create a blog post subtitle that summarizes your post in a few short, punchy sentences and entices your audience to continue reading. Welcome to your blog post. Use this space to connect with your readers and potential customers in a ...</div>
+            <div class="footer">
+              <span>404 views</span>
+              <span>Write a comment</span>
+            </div>
+          </div>
+        </div>
+
+
+
       </div>
     </div>
 
+    <footer id="footer">
+      <div class="part">
+        <div>500 Terry Francois Street San Francisco, CA 94158</div>
+        <a href="">info@mysite.com</a>
+      </div>
+      <div class="part">
+        <a href="">ALISON KNIGHT</a>
+        <div>Nutritionist</div>
+      </div>
+      <div class="part">
+        <div>Tel: 123-456-7890</div>
+      </div>
+      <div class="foot_txt">© 2023 by Alison Knight. Proudly created with Wix.com</div>
+
+    </footer>
 
   </body>
 </html>
