--- a/index.html
+++ b/index.html
@@ -30,10 +30,19 @@
           <a href="">Services</a>
           <a href="">Blog</a>
         </div>
+        <div class="burger">三</div>
       </div>
     </header>
 
-     <div id="guide">
+    <div id="menu">
+      <a href="">Home</a>
+      <a href="">About</a>
+      <a href="">Services</a>
+      <a href="">Blog</a>
+    </div>
+    <div id="over_layout"></div>
+
+    <div id="guide">
        <div class="center">
           <div class="content">
             <h1>"Let food be thy medicine and medicine be thy food"</h1>
