--- a/oa.html
+++ b/oa.html
@@ -1,21 +1,4 @@
-<!DOCTYPE html>
-<html lang="tw">
-  <head>
-    <meta http-equiv="Content-Language" content="zh-tw" />
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui" />
-
-    <title></title>
-
-    <link href="css/oa.css" rel="stylesheet" type="text/css" />
-
-    <script src="js/jquery_v1.10.2/jquery-1.10.2.min.js" language="javascript" type="text/javascript" ></script>
-    <script src="js/public.js" language="javascript" type="text/javascript" ></script>
-
-  </head>
-  <body lang="zh-tw">
-
-    <!-- <div id='box'>
+<!DOCTYPE html><html lang="tw"><head><meta http-equiv="Content-Language" content="zh-tw"><meta http-equiv="Content-type" content="text/html; charset=utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,minimal-ui"><title></title><link href="css/oa.css" rel="stylesheet" type="text/css"><script src="js/jquery_v1.10.2/jquery-1.10.2.min.js" language="javascript" type="text/javascript"></script><script src="js/public.js" language="javascript" type="text/javascript"></script></head><body lang="zh-tw"><!-- <div id='box'>
       <span class='a'>a</span>
 
       <div>
@@ -25,23 +8,9 @@
       <span>asdasds</span>
       <div>asdasds</div>
       <span>asdasds</span>
-    </div> -->
-
-    <!-- <div id='apple'>
+    </div> --><!-- <div id='apple'>
     </div>
 
     <span class='item'>A</span>
     <div class='item'>A</div>
-    <span class='item'>B</span> -->
-
-    <header id='header'>
-      <div>
-        <span class='c1'>1</span>
-        <span class='c2'>2</span>
-        <span class='c3'>3</span>
-      </div>
-    </header>
-
-
-  </body>
-</html>
+    <span class='item'>B</span> --><header id="header"><div><span class="c1">1</span> <span class="c2">2</span> <span class="c3">3</span></div></header></body></html>
