--- a/blog.html
+++ b/blog.html
@@ -40,6 +40,18 @@
         <a href="">Recipes</a>
         <div class="button">Login / Sign up</div>
       </div>
+      <div class="banner mobile">
+        <span>Blog</span>
+        <span>Sign Up</span>
+      </div>
+      <div class="select mobile">
+        <select>
+          <option>All Posts</option>
+          <option>Living Well</option>
+          <option>Healthy Tips</option>
+          <option>Recipes</option>
+        </select>
+      </div>
     </div>
 
     <div id="container">
@@ -52,7 +64,7 @@
             <div class="header">
               <div id="avatar"></div>
               <div class="avatar_detail">
-                <span>Admin</span>
+                <span>Admin1</span>
                 <span>Jan 4 · 2 min</span>
               </div>
             </div>
@@ -75,7 +87,7 @@
             <div class="header">
               <div id="avatar"></div>
               <div class="avatar_detail">
-                <span>Admin</span>
+                <span>Admin2</span>
                 <span>Jan 4 · 2 min</span>
               </div>
             </div>
@@ -98,7 +110,7 @@
             <div class="header">
               <div id="avatar"></div>
               <div class="avatar_detail">
-                <span>Admin</span>
+                <span>Admin3</span>
                 <span>Jan 4 · 2 min</span>
               </div>
             </div>
@@ -121,7 +133,7 @@
             <div class="header">
               <div id="avatar"></div>
               <div class="avatar_detail">
-                <span>Admin</span>
+                <span>Admin4</span>
                 <span>Jan 4 · 2 min</span>
               </div>
             </div>
@@ -144,7 +156,7 @@
             <div class="header">
               <div id="avatar"></div>
               <div class="avatar_detail">
-                <span>Admin</span>
+                <span>Admin5</span>
                 <span>Jan 4 · 2 min</span>
               </div>
             </div>
@@ -167,7 +179,7 @@
             <div class="header">
               <div id="avatar"></div>
               <div class="avatar_detail">
-                <span>Admin</span>
+                <span>Admin6</span>
                 <span>Jan 4 · 2 min</span>
               </div>
             </div>
