--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title></title>
 
     <link href="css/public.css" rel="stylesheet" type="text/css" />
+    <link href="css/icon.css" rel="stylesheet" type="text/css" />
 
     <script src="js/jquery_v1.10.2/jquery-1.10.2.min.js" language="javascript" type="text/javascript" ></script>
     <script src="js/imgLiquid.js" language="javascript" type="text/javascript" ></script>
@@ -30,7 +31,7 @@
           <a href="">Services</a>
           <a href="">Blog</a>
         </div>
-        <div class="burger">三</div>
+        <div class="icon-menu burger"></div>
       </div>
     </header>
 
