--- a/oa2.html
+++ b/oa2.html
@@ -15,7 +15,7 @@
 
   </head>
   <body lang="zh-tw">
-
+<!--
     <header id='header'>
       <div>
         <span class='c1'>1</span>
@@ -30,8 +30,26 @@
       <a>選項 2</a>
       <a>選項 3</a>
       <a>選項 4</a>
-    </div>
+    </div> -->
 
+    <!-- <div id='box' title='售價！'>120</div> -->
+    <div class='oa'>
+      <input type='checkbox' id='t1' />
+      <input type='checkbox' id='t2' />
+      <input type='checkbox' id='t3' />
+
+      <div class='tabs'>
+        <label for='t1'>Tab 1</label>
+        <label for='t2'>Tab 2</label>
+        <label for='t3'>Tab 3</label>
+      </div>
+
+      <div class='panels'>
+        <div>Panel 1</div>
+        <div>Panel 2</div>
+        <div>Panel 3</div>
+      </div>
+    </div>
 
   </body>
 </html>
