--- a/blog.html
+++ b/blog.html
@@ -15,8 +15,7 @@
   </head>
   <body lang="zh-tw">
     <div id='bg'>
-      <img src="https://static.wixstatic.com/media/84770f_3ae959ed8ff54fec89d7bd0574b7bf04.jpg/v1/fill/w_980,h_708,al_c,q_85,usm_0.66_1.00_0.01/84770f_3ae959ed8ff54fec89d7bd0574b7bf04.webp
-">
+      <img src="https://static.wixstatic.com/media/84770f_3ae959ed8ff54fec89d7bd0574b7bf04.jpg/v1/fill/w_980,h_708,al_c,q_85,usm_0.66_1.00_0.01/84770f_3ae959ed8ff54fec89d7bd0574b7bf04.webp">
     </div>
     <header id="header">
       <div class="center">
@@ -32,6 +31,13 @@
 
     <div id="blog">Blog</div>
 
+    <div id="sign">
+      <div class="center">
+        <span>Blog</span>
+        <span>Sign Up</span>
+      </div>
+    </div>
+
     <div id="guide">
       <div class="center">
         <a href="">All Posts</a>
@@ -40,9 +46,20 @@
         <a href="">Recipes</a>
         <div class="button">Login / Sign up</div>
       </div>
+
+      <div id='select' class="icon-1">
+        <select>
+          <option>All Posts</option>
+          <option>Living Well</option>
+          <option>Healthy Tips</option>
+          <option>Recipes</option>
+        </select>
+      </div>
     </div>
 
+
     <div id="container">
+
       <div class="center">
         <div class="box">
           <div class="image">
