--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title></title>
 
     <link href="css/public.css" rel="stylesheet" type="text/css" />
+    <link href="css/icon.css" rel="stylesheet" type="text/css" />
 
     <script src="js/jquery_v1.10.2/jquery-1.10.2.min.js" language="javascript" type="text/javascript" ></script>
     <script src="js/imgLiquid.js" language="javascript" type="text/javascript" ></script>
@@ -28,9 +29,9 @@
           <a href="">Home</a>
           <a href="">About</a>
           <a href="">Services</a>
-          <a href="">Blog</a>
+          <a href="/myblog/blog.html">Blog</a>
         </div>
-        <div class="burger">三</div>
+        <div class="burger icon-1"></div>
       </div>
     </header>
 
@@ -38,7 +39,7 @@
       <a href="">Home</a>
       <a href="">About</a>
       <a href="">Services</a>
-      <a href="">Blog</a>
+      <a href="/myblog/blog.html">Blog</a>
     </div>
     <div id="over_layout"></div>
 
