--- a/oa2.html
+++ b/oa2.html
@@ -7,6 +7,7 @@
 
     <title></title>
 
+    <link href="css/icon.css" rel="stylesheet" type="text/css" />
     <link href="css/oa2.css" rel="stylesheet" type="text/css" />
 
     <script src="js/jquery_v1.10.2/jquery-1.10.2.min.js" language="javascript" type="text/javascript" ></script>
@@ -32,6 +33,13 @@
       <a>選項 4</a>
     </div>
 
+    <div id='select' class="icon-1">
+      <select>
+        <option>Option 1</option>
+        <option>Option 2</option>
+        <option>Option 3</option>
+      </select>
+    </div>
 
   </body>
 </html>
